--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -9,30 +9,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="430" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="InstagramClone_mine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="371" height="430"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="290" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="InstagramClone_mine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="366" height="290"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="371" height="430"/>
+                <rect key="frame" x="0.0" y="0.0" width="366" height="290"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6eO-hS-hGg">
-                        <rect key="frame" x="0.0" y="0.0" width="371" height="422"/>
+                        <rect key="frame" x="0.0" y="0.0" width="366" height="290"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pd3-cD-1JF">
-                                <rect key="frame" x="0.0" y="0.0" width="371" height="400"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="400" id="NaK-qf-b6y"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="366" height="240"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="McD-Yw-dgv">
-                                <rect key="frame" x="0.0" y="400" width="371" height="22"/>
+                                <rect key="frame" x="0.0" y="240" width="366" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm7-VI-rWg" customClass="CustomCommentButton" customModule="InstagramClone_mine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="22" id="hYB-wq-dXa"/>
-                                            <constraint firstAttribute="height" constant="22" id="wnd-BK-LZi"/>
+                                            <constraint firstAttribute="width" constant="40" id="hYB-wq-dXa"/>
+                                            <constraint firstAttribute="height" constant="50" id="wnd-BK-LZi"/>
                                         </constraints>
                                         <state key="normal" image="message" catalog="system"/>
                                         <connections>
@@ -40,7 +37,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3QT-Bi-efE">
-                                        <rect key="frame" x="22" y="0.0" width="349" height="22"/>
+                                        <rect key="frame" x="320.5" y="0.0" width="45.5" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -48,6 +45,7 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="3QT-Bi-efE" firstAttribute="leading" secondItem="Mm7-VI-rWg" secondAttribute="trailing" id="6KO-bl-VuP"/>
+                                    <constraint firstAttribute="height" constant="50" id="Bfg-SU-MU2"/>
                                     <constraint firstAttribute="trailing" secondItem="3QT-Bi-efE" secondAttribute="trailing" id="aKS-gq-zMw"/>
                                 </constraints>
                             </stackView>
@@ -67,7 +65,7 @@
                 <outlet property="postImage" destination="Pd3-cD-1JF" id="Nfg-gD-KdR"/>
                 <outlet property="postLabel" destination="3QT-Bi-efE" id="eii-D3-bym"/>
             </connections>
-            <point key="canvasLocation" x="180.43478260869566" y="243.08035714285714"/>
+            <point key="canvasLocation" x="175.36231884057972" y="196.20535714285714"/>
         </tableViewCell>
     </objects>
     <resources>
