--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -36,8 +36,8 @@
                                             <action selector="commentButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GdC-1q-xJz"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3QT-Bi-efE">
-                                        <rect key="frame" x="320.5" y="0.0" width="45.5" height="50"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3QT-Bi-efE">
+                                        <rect key="frame" x="186" y="0.0" width="180" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
