--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -9,26 +9,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="290" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="InstagramClone_mine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="290"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="419" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="InstagramClone_mine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="367" height="419"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="290"/>
+                <rect key="frame" x="0.0" y="0.0" width="367" height="419"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6eO-hS-hGg">
-                        <rect key="frame" x="0.0" y="0.0" width="366" height="290"/>
+                        <rect key="frame" x="0.0" y="0.0" width="367" height="417"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pd3-cD-1JF">
-                                <rect key="frame" x="0.0" y="0.0" width="366" height="240"/>
+                                <rect key="frame" x="0.0" y="0.0" width="367" height="367"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Pd3-cD-1JF" secondAttribute="height" multiplier="1:1" id="p9K-xI-EtL"/>
+                                </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="McD-Yw-dgv">
-                                <rect key="frame" x="0.0" y="240" width="366" height="50"/>
+                                <rect key="frame" x="0.0" y="367" width="367" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm7-VI-rWg" customClass="CustomCommentButton" customModule="InstagramClone_mine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="40" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fvI-7d-pDA">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="hYB-wq-dXa"/>
+                                            <constraint firstAttribute="width" constant="30" id="O8J-60-eud"/>
+                                        </constraints>
+                                        <state key="normal" image="heart" catalog="system"/>
+                                        <connections>
+                                            <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Rwz-Dg-dgm"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm7-VI-rWg" customClass="CustomCommentButton" customModule="InstagramClone_mine" customModuleProvider="target">
+                                        <rect key="frame" x="36" y="0.0" width="30" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="hYB-wq-dXa"/>
                                             <constraint firstAttribute="height" constant="50" id="wnd-BK-LZi"/>
                                         </constraints>
                                         <state key="normal" image="message" catalog="system"/>
@@ -36,18 +48,9 @@
                                             <action selector="commentButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GdC-1q-xJz"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fvI-7d-pDA">
-                                        <rect key="frame" x="46" y="0.0" width="40" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="O8J-60-eud"/>
-                                        </constraints>
-                                        <state key="normal" image="heart" catalog="system"/>
-                                        <connections>
-                                            <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Rwz-Dg-dgm"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3QT-Bi-efE">
-                                        <rect key="frame" x="92" y="0.0" width="274" height="50"/>
+                                        <rect key="frame" x="72" y="0.0" width="295" height="50"/>
+                                        <gestureRecognizers/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -55,11 +58,16 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Bfg-SU-MU2"/>
+                                    <constraint firstItem="3QT-Bi-efE" firstAttribute="leading" secondItem="Mm7-VI-rWg" secondAttribute="trailing" constant="6" id="aBW-fk-8I0"/>
                                     <constraint firstAttribute="trailing" secondItem="3QT-Bi-efE" secondAttribute="trailing" id="aKS-gq-zMw"/>
-                                    <constraint firstItem="3QT-Bi-efE" firstAttribute="leading" secondItem="fvI-7d-pDA" secondAttribute="trailing" constant="6" id="zfK-gy-r1j"/>
                                 </constraints>
                             </stackView>
                         </subviews>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="Pd3-cD-1JF" firstAttribute="top" secondItem="6eO-hS-hGg" secondAttribute="top" id="Ia4-bi-JWk"/>
+                            <constraint firstItem="Pd3-cD-1JF" firstAttribute="leading" secondItem="6eO-hS-hGg" secondAttribute="leading" id="sDt-rd-m8X"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
@@ -70,13 +78,14 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <gestureRecognizers/>
             <connections>
                 <outlet property="commentButton" destination="Mm7-VI-rWg" id="9MO-48-xNv"/>
                 <outlet property="likeButton" destination="fvI-7d-pDA" id="CDU-JU-qmr"/>
                 <outlet property="postImage" destination="Pd3-cD-1JF" id="Nfg-gD-KdR"/>
                 <outlet property="postLabel" destination="3QT-Bi-efE" id="eii-D3-bym"/>
             </connections>
-            <point key="canvasLocation" x="175.36231884057972" y="196.20535714285714"/>
+            <point key="canvasLocation" x="187.68115942028987" y="206.58482142857142"/>
         </tableViewCell>
     </objects>
     <resources>
