--- a/InstagramClone_mine/Main.storyboard
+++ b/InstagramClone_mine/Main.storyboard
@@ -55,13 +55,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5vb-E4-pH8">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="329" width="414" height="484"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qU8-GB-qDU">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="655"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="qU8-GB-qDU" secondAttribute="height" multiplier="1:1" id="1qd-9F-E7y"/>
+                                        </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvy-L9-TSQ">
-                                        <rect key="frame" x="0.0" y="655" width="414" height="70"/>
+                                        <rect key="frame" x="0.0" y="414" width="414" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="kRo-av-us2"/>
                                         </constraints>
@@ -78,7 +81,6 @@
                             <constraint firstItem="5vb-E4-pH8" firstAttribute="leading" secondItem="KJc-Rg-9l3" secondAttribute="leading" id="1Da-6J-a68"/>
                             <constraint firstAttribute="trailing" secondItem="5vb-E4-pH8" secondAttribute="trailing" id="ZN8-Hh-jxW"/>
                             <constraint firstItem="KJc-Rg-9l3" firstAttribute="bottom" secondItem="5vb-E4-pH8" secondAttribute="bottom" id="tpT-KZ-88l"/>
-                            <constraint firstItem="5vb-E4-pH8" firstAttribute="top" secondItem="KJc-Rg-9l3" secondAttribute="top" id="wwR-wr-ow8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="egI-8c-odS"/>
